# pyopenva_GUI

./: .gitignore  CHANGELOG.md  Pipfile  README.md  pyproject.toml  requirements-mac.txt  requirements.txt  setup.py
.github/workflows/: create_release.yml
docs/source/: conf.py  custom.rst  faq.rst  index.rst  vignette.rst  wizard.rst
docs/source/_static/: custom.css
pyopenva/: __version__.py  command_center.py  data.py  edit_window.py  efficient.py  insilicova_ui.py  interva_ui.py  load.py  main.py  make_variable.py  mode.py  output.py  pyinstaller.py  results.py  smartva_ui.py  workers.py
pyopenva/data/: who151_odk_export.csv
pyopenva/docs/: .buildinfo  custom.html  faq.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  vignette.html  wizard.html
pyopenva/docs/.doctrees/: custom.doctree  environment.pickle  faq.doctree  index.doctree  vignette.doctree  wizard.doctree
pyopenva/docs/_sources/: custom.rst.txt  vignette.rst.txt  wizard.rst.txt
pyopenva/src/main/python/: algorithms.py  command_center.py  data.py  edit_window.py  efficient.py  insilico.py  insilico_ui.py  insilicova_ui.py  interva.py  interva_ui.py  load.py  main.py  mode.py  output.py  results.py  smartva.py  welcome.py
tests/: test_efficient.py
