[project]
name = "pyopenva"
version = "1.2"
description = "Graphic User Interface application for openVA"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
pyqt5-qt5 = "==5.15.2"
pyqtwebengine-qt5 = "==5.15.2"
pyqt5 = "*"
pyqtwebengine = "*"
pycrossva = ">=0.98"
interva = ">=1.0.0"
vacheck = ">=0.0.3"
insilicova = ">=0.1.3"
matplotlib = "==3.6.3"
sphinx  = "*"
pandas = "==2.0.3"
sphinxemoji = "*"
cx-freeze = ">=6.5.12"
