[project]
name = "pyopenva"
version = "1.2"
description = "Graphic User Interface application for openVA"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
pyqt5-qt5 = [
    {version = "==5.15.2", platform = "win32"},
    {version = "==5.15.13", platform = "darwin"}
    ]
pyqtwebengine-qt5 = [
    {version = "==5.15.2", platform = "win32"},
    {version = "==5.15.13", platform = "darwin"}
    ]
pyqt5 = "*"
pyqtwebengine = "*"
pycrossva = ">=0.98"
interva = ">=1.0.0"
vacheck = ">=0.0.3"
insilicova = ">=0.1.3"
matplotlib = "==3.6.3"
sphinx  = "*"
pandas = "==2.0.3"
sphinxemoji = "*"
cx_Freeze = "==6.15.12"
